<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kimerasoft_ec.thematrix.InterchangeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row"
                android:checked="true"
                android:id="@+id/rbtRow"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/column"
                android:layout_height="wrap_content"
                android:id="@+id/rbtColumn"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            />
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/spnIndex"
            android:layout_height="wrap_content"></Spinner>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            >
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/btnAccept"
                android:text="@string/accept"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
